tests/models/enum/unnamed/u128/pass/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(lt = 2)]
        u128
    ),
}
fn main() {}
